start simplification of setup

--- a/ansible/drone_setup.yml
+++ b/ansible/drone_setup.yml
@@ -340,3 +340,15 @@
         path: /etc/hosts
         regexp: '(127\.0\.1\.1\s+).+'
         replace: \1{{ hostname }}
+
+  - name: Set WiFi
+    community.general.nmcli: 
+      type: wifi
+      conn_name: default_drones
+      ifname: "{{ drone_wifi_interface }}"
+      ssid: "{{ wifi_ssid }}"
+      wifi_sec: 
+        key-mgmt: wpa-psk
+        psk: "{{ wifi_password }}"
+      autoconnect: true
+      state: present
