--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
 site_name: Omni NXT
 nav: 
   - Home: index.md
-  - Hardware Setup: hardware-setup.md
   - IT Infrastructure Setup: it-infra-setup.md
-  - Software Setup: software-setup.md
+  - Drone Build Instructions: drone-setup.md
+  - Flying: flying.md
   - Image Creation Steps: image-creation.md
   - Flight Controller Setup: nxt-setup.md
   - Remote Controller Setup: remote-control-setup.md
