--- a/ansible/drones_preflight.yml
+++ b/ansible/drones_preflight.yml
@@ -33,65 +33,38 @@
         state: directory
 
 
-    # move this stuff to drone setup instead of preflight
-    - name: Mocap to Vision
-      when: "position_estimation == 'optitrack'"
-      block: 
-      - name: Get optitrack package
-        ansible.builtin.git:
-          repo: https://github.com/lis-epfl/optitrack_packages_ros2/
-          dest: /home/lis/ros2_ws/src/optitrack_packages_ros2
-          force: yes
 
-      - name: Remove multiplexer
-        ansible.builtin.file: 
-          path: /home/lis/ros2_ws/src/optitrack_packages_ros2/optitrack_multiplexer_ros2
-          state: absent
+    - name: Set correct pose topic for mocap_to_vision_pose # TODO: Perhaps patch mocap_to_vision_pose_ros2
+      ansible.builtin.replace: 
+        path: /home/lis/ros2_ws/src/mocap_to_vision_pose_ros2/config/config.yaml
+        regexp: "/optitrack_multiplexer_node/rigid_body/[A-Za-z_0-9]+"
+        replace: "/optitrack_multiplexer_node/rigid_body/{{ ansible_facts['nodename'] }}" # this will be dynamic so can drop
+    
+    - name: Build mocap_to_vision_pose
+      become: false
+      ansible.builtin.shell: . /opt/ros/humble/setup.sh && colcon build --symlink-install 
+      args:
+        chdir: /home/lis/ros2_ws
 
-      - name: Remove wrapper
-        ansible.builtin.file: 
-          path: /home/lis/ros2_ws/src/optitrack_packages_ros2/optitrack_wrapper_ros2
-          state: absent
+    - name: Create mocap_to_vision script
+      become: false
+      ansible.builtin.template: 
+        src: scripts/mocap_start.sh
+        dest: /home/lis/mocap_start.sh
+        mode: "755"
+    
+    - name: Install mocap service 
+      ansible.builtin.template: 
+        src: templates/mocap_service.j2
+        dest: /etc/systemd/system/mocap.service
+
       
-      - name: Get mocap to vision package
-        ansible.builtin.git: 
-          repo: https://github.com/lis-epfl/mocap_to_vision_pose_ros2
-          dest: /home/lis/ros2_ws/src/mocap_to_vision_pose_ros2
-          force: yes 
-      
-      # end doing on setup
-
-      - name: Set correct pose topic for mocap_to_vision_pose # TODO: Perhaps patch mocap_to_vision_pose_ros2
-        ansible.builtin.replace: 
-          path: /home/lis/ros2_ws/src/mocap_to_vision_pose_ros2/config/config.yaml
-          regexp: "/optitrack_multiplexer_node/rigid_body/[A-Za-z_0-9]+"
-          replace: "/optitrack_multiplexer_node/rigid_body/{{ ansible_facts['nodename'] }}" # this will be dynamic so can drop
-      
-      - name: Build mocap_to_vision_pose
-        become: false
-        ansible.builtin.shell: . /opt/ros/humble/setup.sh && colcon build --symlink-install 
-        args:
-          chdir: /home/lis/ros2_ws
-
-      - name: Create mocap_to_vision script
-        become: false
-        ansible.builtin.template: 
-          src: scripts/mocap_start.sh
-          dest: /home/lis/mocap_start.sh
-          mode: "755"
-      
-      - name: Install mocap service 
-        ansible.builtin.template: 
-          src: templates/mocap_service.j2
-          dest: /etc/systemd/system/mocap.service
-
-        
-      - name: Start mocap service
-        ansible.builtin.systemd: 
-          name: mocap
-          state: restarted
-          enabled: false
-          daemon_reload: true
+    - name: Start mocap service
+      ansible.builtin.systemd: 
+        name: mocap
+        state: restarted
+        enabled: false
+        daemon_reload: true
       
 
     
@@ -128,6 +101,26 @@
           ansible.builtin.shell: /tmp/chronyc_check.py
           register: chronyc_check
           changed_when: false
+
+
+    - name: Local Mocap
+      when: "position_estimation == 'optitrack'"
+      delegate_to: 127.0.0.1
+      block: 
+      - name: Modify wrapper config file
+        ansible.builtin.lineinfile: 
+          path: "{{ host_ros_path }}/src/optitrack_packages_ros2/optitrack_wrapper_ros2/config/optitrack_wrapper_config.yaml"
+          regexp: "^(\\s+)server_address:\\s?.*"
+          backrefs: true
+          line: "\\1server_address: \"{{ optitrack_server_ip }}\""
+      - name: Modify multiplexer config file
+        ansible.builtin.lineinfile: 
+          path: "{{ host_ros_path }}/src/optitrack_packages_ros2/optitrack_multiplexer_ros2/config/optitrack_multiplexer_config.yaml"
+          regexp: "^(\\s+)rigid_body_names:\\s?.*"
+          backrefs: true
+          line: "\\1rigid_body_names: \"{{ ansible_play_batch |  map('regex_replace', '\\.local$', '') | join(',') }}\""
+      
+      # modify the local config variables for the stuff to export
 
 
 
