--- a/ros_packages/latency_checker_ros2/package.xml
+++ b/ros_packages/latency_checker_ros2/package.xml
@@ -6,8 +6,11 @@
   <description>TODO: Package description</description>
   <maintainer email="niel.mistry@epfl.ch">mistry</maintainer>
   <license>Apache-2.0</license>
+
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
-  
+
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
