--- a/ros_packages/bounds_checker_ros2/package.xml
+++ b/ros_packages/bounds_checker_ros2/package.xml
@@ -4,7 +4,7 @@
   <name>bounds_checker_ros2</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="root@todo.todo">root</maintainer>
+  <maintainer email="niel.mistry@epfl.ch">root</maintainer>
   <license>TODO: License declaration</license>
   <member_of_group>rosidl_interface_packages</member_of_group>
 
