--- a/ros_packages/drone_planner_ros2/package.xml
+++ b/ros_packages/drone_planner_ros2/package.xml
@@ -7,6 +7,8 @@
   <maintainer email="niel.mistry@epfl.ch">root</maintainer>
   <license>TODO: License declaration</license>
   <member_of_group>rosidl_interface_packages</member_of_group>
+  <depend>eigen</depend>
+
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
