--- a/.github/workflows/check_docs.yaml
+++ b/.github/workflows/check_docs.yaml
@@ -25,7 +25,7 @@ jobs:
 
         - name: Install dependencies
           run: |
-              pip install mkdocs
+              pip install -r requirements.txt
 
         - name: Build documentation
           run: mkdocs build -s
