--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,3 +10,9 @@ nav:
 theme: readthedocs
 markdown_extensions:
   - admonition
+  - pymdownx.arithmatex:
+      generic: true
+
+extra_javascript:
+  - js/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
