--- a/ansible/run_simulator.yml
+++ b/ansible/run_simulator.yml
@@ -49,7 +49,7 @@
           ansible.builtin.git: 
             repo: git@github.com:lis-epfl/omni-nxt
             dest: "{{ drone_base_path }}/repos/omni-nxt"
-            version: test/first_drone_integration # TODO: temp
+            version: dummy-controller # TODO: temp
             key_file: ~/.ssh/id_ed25519
             accept_newhostkey: yes
             force: yes
