--- a/ansible/drones_preflight.yml
+++ b/ansible/drones_preflight.yml
@@ -123,7 +123,22 @@
           src: scripts/ros_packages_start.sh
           dest: "{{ host_base_path }}/ros_packages_start.sh"
           mode: "755"
-      
+     
+      - name: Create config directory
+        ansible.builtin.file:
+          dest: "{{ host_ros_path }}/config"
+          state: directory
+          mode: "755"
+    
+      - name: Copy peer list
+        ansible.builtin.template: 
+          src: templates/peer_list.yaml.j2
+          dest: "{{ host_ros_path }}/config/peer_list.yaml"
+          mode: "644"
+        vars:
+          peers: "{{ groups['drones'] | map('regex_replace', '\\.local$', '') | join('\n') }}"
+
+    -  
       - name: Create local systemd folder
         ansible.builtin.file:
           dest: "~/.local/share/systemd/user"
