--- a/ansible/run_simulator.yml
+++ b/ansible/run_simulator.yml
@@ -43,12 +43,12 @@
         dest: "{{ drone_ros_path }}/src/mocap_to_vision_pose_ros2"
         force: yes 
         
-    - name: OmniNXT Nodes
+    - name: SwarmNXT Nodes
       block: 
         - name: Get repository 
           ansible.builtin.git: 
-            repo: git@github.com:lis-epfl/omni-nxt
-            dest: "{{ drone_base_path }}/repos/omni-nxt"
+            repo: git@github.com:lis-epfl/swarm-nxt
+            dest: "{{ drone_base_path }}/repos/swarm-nxt"
             version: dummy-controller # TODO: temp
             key_file: ~/.ssh/id_ed25519
             accept_newhostkey: yes
@@ -56,7 +56,7 @@
           
         - name: List ros_packages directories
           ansible.builtin.find:
-            paths: "{{ drone_base_path }}/repos/omni-nxt/ros_packages"
+            paths: "{{ drone_base_path }}/repos/swarm-nxt/ros_packages"
             file_type: directory
             recurse: false
           register: ros_packages_reg
