--- a/ansible/host_computer.yml
+++ b/ansible/host_computer.yml
@@ -115,13 +115,13 @@
       block: 
         - name: Get repository 
           ansible.builtin.git: 
-            repo: git@github.com:lis-epfl/omni-nxt
-            dest: "{{ host_base_path }}/repos/omni-nxt"
+            repo: git@github.com:lis-epfl/swarm-nxt
+            dest: "{{ host_base_path }}/repos/swarm-nxt"
             version: dummy-controller # TODO: temp
             force: yes
         - name: Link to ros_ws
           ansible.builtin.file: 
-            src: "{{ host_base_path }}/repos/omni-nxt/ros_packages/latency_checker_ros2"
+            src: "{{ host_base_path }}/repos/swarm-nxt/ros_packages/latency_checker_ros2"
             dest: "{{ host_ros_path }}/src/latency_checker_ros2"
             state: link
       
