--- a/.github/workflows/check_docs.yaml
+++ b/.github/workflows/check_docs.yaml
@@ -29,3 +29,37 @@ jobs:
 
         - name: Build documentation
           run: mkdocs build -s
+        
+        - name: Make artifact
+          uses: actions/upload-artifact@v4
+          with: 
+              name: website
+              path: site/
+              retention-days: 1
+    
+    deploy:
+        if: github.ref == 'refs/head/main' 
+        runs-on: ubuntu-latest
+        needs: build-docs
+        permissions:
+          pages: write
+          id-token: write
+        environment: 
+          name: github-pages
+          url: ${{ steps.deployment.outputs.page_url }}
+        steps:
+          - name: Get website
+            uses: actions/download-artifact@v4 
+            with: 
+              name: website
+          - name: Setup pages
+            uses: actions/configure-pages@v5
+          - name: Upload Artifact
+            uses: actions/upload-pages-artifact@v3
+            with: 
+              path: 'site'
+          - name: Deploy
+            id: deployment
+            uses: actions/deploy-pages@v4
+            
+        
