--- a/.github/workflows/check_docs.yaml
+++ b/.github/workflows/check_docs.yaml
@@ -38,7 +38,6 @@ jobs:
               retention-days: 1
     
     deploy:
-        if: github.ref == 'refs/head/main' 
         runs-on: ubuntu-latest
         needs: build-docs
         permissions:
@@ -61,5 +60,7 @@ jobs:
           - name: Deploy
             id: deployment
             uses: actions/deploy-pages@v4
-            
+
+          - name: Debug
+            run: echo $github.ref
         
