--- a/.github/workflows/check_docs.yaml
+++ b/.github/workflows/check_docs.yaml
@@ -56,7 +56,7 @@ jobs:
           - name: Upload Artifact
             uses: actions/upload-pages-artifact@v3
             with: 
-              path: 'site'
+              path: 'website'
           - name: Deploy
             id: deployment
             uses: actions/deploy-pages@v4
