--- a/.github/workflows/check_docs.yaml
+++ b/.github/workflows/check_docs.yaml
@@ -38,6 +38,7 @@ jobs:
               retention-days: 1
     
     deploy:
+        if: github.ref_name == 'main'
         runs-on: ubuntu-latest
         needs: build-docs
         permissions:
@@ -61,6 +62,3 @@ jobs:
             id: deployment
             uses: actions/deploy-pages@v4
 
-          - name: Debug
-            run: echo $github.ref
-        
