remove modemmanager remover

--- a/ansible/host_computer.yml
+++ b/ansible/host_computer.yml
@@ -155,14 +155,10 @@
           - libxkbcommon-x11-0 
           - libxcb-cursor-dev
     - name: Allow rootless access to flight controller
-      ansible.builtin.user: # Add the current user to the dialout group
+      ansible.builtin.user: # Add the current user to the dialout group, for flashing the fc
         name: "{{ ansible_user_id }}"
         groups: dialout
         append: true
-    - name: Remove modemmanager
-      ansible.builtin.apt:
-        name: modemmanager
-        state: absent
     - name: Download necessary items
       become: false
       block: 
